<resources>
    <string name="app_name">Signpost</string>
    <string name="title_activity_example_maps">Map</string>
    <string name="title_activity_main">Signpost</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_map_no_posts">no posts in your area...</string>
    <string name="row_post_longitude">Longitude:</string>
    <string name="row_post_latitude">Latitude:</string>
    <string name="activity_create_sign_name_edittext">Name</string>
    <string name="activity_create_sign_message_edittext">Message</string>
    <string name="activity_create_sign_save_button">Hang Sign</string>
    <string name="fragment_create_sign_failure_nearby_post_get">Failed to Retrive Nearby Posts</string>
    <string name="fragment_create_sign_newpost">Make New Post</string>
    <string name="fragment_create_sign_item_clicked">You clicked an item</string>
    <string name="fragment_create_sign_item_spinner_prompt">Select a post</string>
    <string name="fragment_dialog_new_post">New Post</string>
    <string name="fragment_dialog_enter_new_post_name">Enter new post name</string>
    <string name="add">Plant Post</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_make_post">Failed to Make Post</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="fragment_create_sign_spinner_prompt">Select a post</string>
    <string name="post_title">Post Title</string>
    <string name="create_post">Create Post</string>
    <string name="fragment_login_login">login</string>
    <string name="fragment_login_username">username</string>
    <string name="fragment_login_add_user">add user</string>
    <string name="select_a_post">Select a post</string>
    <string name="post_distance">10 mi</string>
    <string name="post_last_updated">10 mins ago</string>
    <string name="row_post_sign_count">10</string>
    <string name="row_post_distanceto">Distance away: %s mi</string>
</resources>
