<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ml.signpost.signpost.Fragments.LoginFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/fragment_login_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_login"
        android:textAlignment="center"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/fragment_login_username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_login_username"
        android:layout_margin="8dp"
        />

    <Button
        android:id="@+id/fragment_login_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_login"
        />

    <Button
        android:id="@+id/fragment_login_adduser_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_login_add_user"
        />
</LinearLayout>


