<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_create_sign_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ml.signpost.signpost.Activities.MainActivity"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView
        android:id="@+id/activity_create_sign_mapview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <RadioGroup
        android:id="@+id/activity_create_sign_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        >
        <RadioButton
            android:id="@+id/activity_create_sign_radiobutton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/activity_create_sign_radiobutton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/activity_create_sign_radiobutton3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/activity_create_sign_radiobutton4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/activity_create_sign_radiobutton5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </RadioGroup>

    <Spinner
        android:id="@+id/activity_create_sign_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:prompt="@string/fragment_create_sign_spinner_prompt"
        />

    <EditText
        android:id="@+id/activity_create_sign_messageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_create_sign_message_edittext"
        android:minLines="4"
        />

    <Button
        android:id="@+id/activity_create_sign_saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_create_sign_save_button"
        android:layout_gravity="bottom"
        />

</LinearLayout>
